--- a/css/styles.css
+++ b/css/styles.css
@@ -241,8 +241,7 @@ align-items: center;
 
 .header-nav-list-item-link {
         display: inline-block;
-        padding-top: 24px;
-        padding-bottom: 24px;
+        padding: 24px 0;
         padding-right: 76px;
 
         color: var(--navyblue);
@@ -286,8 +285,7 @@ padding: 24px 0;
         justify-content: center;
                 align-items: center;
                 
-                padding-top: 24px;
-                padding-bottom: 24px;
+                padding: 24px 0;
 
                 color: var(--slate);
                         font-size: 16px;
