--- a/css/styles.css
+++ b/css/styles.css
@@ -232,6 +232,7 @@ align-items: center;
         display: flex;
         align-items: center;
         gap: 40px;
+        padding: 24px 0;
 
 }
 
@@ -270,6 +271,7 @@ align-items: center;
         align-items: center;
 
         gap: 40px;
+        
         /*
         padding-top: 24px;
         padding-bottom: 24px;
