--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,7 @@ align-items: center;
 .header-nav {
         display: flex;
         align-items: center;
+        padding: 24px 0;
 }
 
 .header-nav-list {
@@ -271,6 +272,7 @@ align-items: center;
         align-items: center;
 
         gap: 40px;
+        padding: 24px 0;
         
         /*
         padding-top: 24px;
