--- a/css/styles.css
+++ b/css/styles.css
@@ -224,7 +224,7 @@ align-items: center;
 .header-nav {
         display: flex;
         align-items: center;
-        padding: 24px 0;
+       /* padding: 24px 0;*/
 }
 
 .header-nav-list {
@@ -233,7 +233,7 @@ align-items: center;
         display: flex;
         align-items: center;
         gap: 40px;
-        padding: 24px 0;
+        /*padding: 24px 0;*/
 
 }
 
@@ -243,7 +243,7 @@ align-items: center;
 
 .header-nav-list-item-link {
         display: inline-block;
-        padding: 24px 0;
+        /*padding: 24px 0;*/
         padding-right: 76px;
 
         color: var(--navyblue);
@@ -288,7 +288,6 @@ padding: 24px 0;
         display: inline-block;
         justify-content: center;
                 align-items: center;
-                
                 padding: 24px 0;
 
                 color: var(--slate);
