--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,12 @@ button {
 .header-container {
 display: flex;
 align-items: center;
+
+width: 1158px;
+        margin-left: auto;
+        margin-right: auto;
+       /* padding-left: 15px;
+        padding-right: 15px;*/
 }
 
 .header-nav {
